# PlexSim

./: .gitattributes  .gitignore  Axelrod.pyx  Axelrod.pyxx  Circular.cpp  Circular.pyx  FastIsing.cpp  FastIsing.pxd  FastIsing.pyx  MANIFEST.in  Makefile  Models.cpp  Models.pxd  Models.pyx  Percolation.cpp  Percolation.pyx  Potts.cpp  Potts.pxd  Potts.pyx  RBN.py  SIS.py  Schelling.pxd  XOR.py  artNet.py  axelrox.pycd  build.sh  build_docs.sh  circular.cpp  circular.pxd  circular.pyx  compile.py  environment.yml  fastIsing.c  fastIsing.cpp  fastIsing.html  fastIsing.pxd  fastIsing.pyx  grayscott.c  index.md  install.sh  (+21 more)
BACK_PLEX/: MCMC.cpp  PottsFast.cpp  cpp_models.cpp  data_types.hpp  edge.py  example2.cpp  example_bk.cpp  test_example.cpp  testing.cpp  testing_example.cpp  vec.cpp  w.cpp  weird.cpp  weird.py
Models/: .#Circular.pyx.bak  .#definitions.pxd  Bornholdt.pxd  Bornholdt.pyx  Circular.pxd  Circular.pyx  FastIsing.pxd  FastIsing.pyx  Models.pxd  Models.pyx  Potts.pxd  (+17 more)
plexsim/: .#models.pyx  :  CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  __init__.py  a.out  adjacency.pxd  adjacency.pyx  armadillo  bench.py  blas  build.sh  build_example.sh  cmake_install.cmake  config.cpp  config.hpp  cy_tests.pyx  cy_tests_memory.pyx  d.py  definitions.pxi  definitions_old.hpp  edge.json  edge.py  example  example.cpp  example.cpython-38-x86_64-linux-gnu.sorr  jl_e.jl  m.hpp  magnetic_boids.pxd  magnetic_boids.pyx  main.cpp  mcmc.pxd  mcmc.pyx  model.cpp  model.hpp  model_base.hpp  models.cpp  models.h  (+41 more)
plexsim/.xmake/linux/x86_64/: xmake.conf
plexsim/.xmake/linux/x86_64/cache/: config
plexsim/BACK_PLEX/: Kuramoto.py  build_example.sh  dotoo.dotoo  test_deriv.py
plexsim/BACK_PLEX/src/: lib.rsk.bk  main.rs
plexsim/BACK_PLEX/tests/: CMakeLists.txt  cy_tests_memory.c  test_cppmodel.py  test_memoryptr.pyx  test_pickle.c  test_rust
plexsim/include/: crawler.cpp  crawler.hpp  gradient_checker.cpp  gradient_checker.hpp  main  mt19937.h  pycrawler.cpp  pycrawler.pxd  pycrawler.pyx  pyobjectholder.cpp  pyobjectholder.hpp  test  test_crawler.cpp  test_gr  value_edges.cpp  value_edges.hpp
plexsim/lib/: pyobjectholder.cpp  test.cpp
plexsim/models/: __init__.py  ab.cpp  ab.pxd  ab.pyx  adjacency.cpp  adjacency.pxd  adjacency.pyx  baksnep.cpp  baksnep.pyx  base.cpp  base.h  base.pxd  base.pyx  binding.cpp  binding.pxd  binding.pyx  bonabeau.cpp  bonabeau.pxd  bonabeau.pyx  bornholdt.cpp  bornholdt.pxd  bornholdt.pyx  cca.cpp  cca.pxd  cca.pyx  cpp_binding.cpp  cpp_binding.hpp  cyclic.cpp  cyclic.pxd  cyclic.pyx  game_of_life.cpp  game_of_life.pxd  game_of_life.py  game_of_life.pyx  heisenberg.cpp  heisenberg.pyx  ising.cpp  ising.pxd  ising.pyx  kawasaki.cpp  (+70 more)
plexsim/plexsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plexsim/src/: lib.rs  main.rs
plexsim/tests/: CMakeCache.txt  cy_tests.pyx  eigen  run_tests.sh  test  test_cppmodel.py  test_models.py  test_numpy.py
plexsim/utils/: annealing.py  bundling.py  graph.py  hm.py  rules.py  visualisation.py  visualization.py
(+378 files in other folders)
