[metadata]
name         = plexsim
author       = "Casper van Elteren"
author_email = "caspervanelteren@gmail.com"
url          = "cvanelteren.github.io"
version      = 2.0

[options]
package_dir =
  = plexsim
packages               = find:
install_requires       =
        cython
        numpy
        networkx
zip_safe               = False

[options.packages.find]
where   = "plexsim"
include = "utils*"
exclude = "core*
