[package]
name = "test_rust"
version = "0.1.0" 
authors = ["Casper van Elteren <caspervanelteren@mgail.com"]

[dependencies]
ndarray = "0.12"
ndarray-rand = "0.8"
rand = "0.7.3"  
mersenne_twister ="1.1.1"
rayon = "1.3"
serde_json ="1.0"
serde = { version = "1.0", features = ["derive"] }
backtrace = "0.3"
floating-duration="0.1.2"
rand_mt = "3.0.0"
[profile.release]
    opt-level = 3   