[package]
name = "test_rust"
version = "0.1.0" 
authors = ["Casper van Elteren <caspervanelteren@mgail.com"]

[dependencies]
ndarray = { version = "0.13.1", features = ["rayon"] } 
ndarray-rand = ""
rand = ""  
mersenne_twister ="1.1.1"
rayon = ""
serde_json ="1.0"
serde = { version = "1.0", features = ["derive"] }
backtrace = "0.3"
floating-duration="0.1.2"
rand_mt = "3.0.0"
xorshift="0.1.3"
time =  ""
faster = ""
# numpy = "0.9"
# pyo3 = ""
# simd = ""

#[lib]
#name = "pyrust"
#crate-type = ["cdylib"]


#[dependencies.pyo3]
#version = "0.10.1"
#features = ["extension-module"]
[profile.release]
debug = true
opt-level = 3       
ito="fat"
codegen-unit=1
target-cpu="native"